3TierArchitecture/modules/nat.tf
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public_subnet.id
  depends_on    = ["aws_internet_gateway.gw"]
}
